# learn-rust-embedded

./: Cargo.toml  README.md  openocd.gdb
auxiliary/: Cargo.toml
auxiliary/src/: a0.rs  a1.rs  lib.rs
src/: 00-simple.rs  01-led-flash.rs  02-hello-world.rs
src/challenges/: led-compass.rs  reverse-echo-server.rs  roulette.rs
src/exercises/: 02-hello-world.rs  03-registers.rs  04-raw-leds.rs  05-raw-timer.rs  06-uart.rs  07-lsm303dlhc.rs
