[package]
authors = ["arosspope <andrew.pope456@gmail.com>"]
edition = "2018"
name = "learn-rust-embedded"
version = "0.0.1"

[dependencies]
cortex-m = "0.5.6"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.3"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"

[[bin]]
name = "simple"
path = "src/00-simple.rs"

[[bin]]
name = "led-flash"
path = "src/01-led-flash.rs"

[[bin]]
name = "itm-hello"
path = "src/02-hello-world.rs"
