[package]
authors = ["arosspope <andrew.pope456@gmail.com>"]
edition = "2018"
name = "learn-rust-embedded"
version = "0.0.1"

[dependencies]
cortex-m = "0.5.6"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.3"
heapless = "*"
lsm303dlhc = "0.2.0"
m = "0.1.1"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"

# [dependencies.stm32f3]
# version = "0.9.0"
# features = ["stm32f303", "rt"]

[[bin]]
name = "simple"
path = "src/exercises/00-simple.rs"

[[bin]]
name = "led-flash"
path = "src/exercises/01-led-flash.rs"

[[bin]]
name = "itm-hello"
path = "src/exercises/02-hello-world.rs"

[[bin]]
name = "registers"
path = "src/exercises/03-registers.rs"

[[bin]]
name = "raw-leds"
path = "src/exercises/04-raw-leds.rs"

[[bin]]
name = "roulette"
path = "src/challenges/roulette.rs"

[[bin]]
name = "raw-timer"
path = "src/exercises/05-raw-timer.rs"

[[bin]]
name = "uart"
path = "src/exercises/06-uart.rs"

[[bin]]
name = "reverse-echo-server"
path = "src/challenges/reverse-echo-server.rs"

[[bin]]
name = "lsm"
path = "src/exercises/07-lsm303dlhc.rs"

[[bin]]
name = "led-compass"
path = "src/challenges/led-compass.rs"

